<resources>
    <string name="app_name">Travelo</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="new_username_hint">New Username</string>
    <string name="new_password_hint">New Password</string>
    <string name="create_account">Create Account</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="home">Home</string>
    <string name="settings">Settings</string>
    <string name="profile">Profile</string>
    <string name="add_trip">Add Map</string>
    <string name="create_trip">Create Map</string>
    <string name="join_trip">Join Map</string>
    <string name="room_id">Room ID</string>
    <string name="enter">Enter</string>
    <string name="message_hint">Type here</string>
    <string name="send">Send</string>
    <string name="profile_me">My Profile Pic</string>
    <string name="profile_other">Other profile pic</string>
    <string name="ready">Ready</string>
    <string name="add">Add</string>
    <string name="remove">Remove</string>
    <string name="waiting">Waiting</string>
    <string name="waiting_on">Waiting On:</string>
    <string name="final_map">Final Map</string>
    <string name="description">Description</string>
    <string name="done">Done</string>
    <string name="post">Post</string>
    <string name="comment">Comment</string>
    <string name="search_location">Search Location</string>
    <string name="logout">Logout</string>
    <string name="add_photo">Add Photo</string>
    <string name="follow">Follow</string>
    <string name="following">Following</string>
    <string name="followers">Followers</string>
    <string name="inbox">Inbox</string>
    <string name="room_id_semi">Room ID:</string>
    <string name="join">Join</string>
    <string name="message">Message</string>
    <string name="search">Search</string>
    <string name="invite">Invite</string>
    <string name="friend">Friend</string>
    <string name="unfriend">Unfriend</string>
    <string name="friend_request">Friend Request</string>
    <string name="accept">Accept</string>
    <string name="reject">Reject</string>
    <string name="empty_inbox_message">Your Inbox is Empty</string>
    <string name="friend_request_sent">Friend Request Sent</string>
    <string name="delete">Delete</string>
    <string name="friends">Friends</string>
    <string name="liked">Liked</string>
    <string name="kick">Kick</string>
    <string name="update">Update</string>
    <string name="update_bio">Update Bio</string>
    <string name="archived">Archived</string>
    <string name="undo">Undo</string>
    <string name="all_messages">All Messages</string>
    <string name="not_archived">Message is no longer archived</string>
    <string name="parse_api_address">https://parseapi.back4app.com</string>
    <string name="invite_only">Invite Only</string>
    <string name="room_settings">Room Settings</string>
    <string name="save">Save</string>
    <string name="confirm">Confirm</string>
    <string name="room_deletion_title">Delete Room:</string>
    <string name="room_deletion_message">Are you sure you want to delete this room?</string>

</resources>