<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    >

    <item
        android:id="@+id/action_home"
        android:icon="@drawable/ic_baseline_home_24"
        android:title="@string/home"
        android:enabled="true"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_profile"
        android:icon="@drawable/ic_baseline_person_24"
        android:title="@string/profile"
        android:enabled="true"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_add_trip"
        android:icon="@drawable/ic_baseline_add_location_alt_24"
        android:title="@string/add_trip"
        android:enabled="true"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_settings"
        android:icon="@drawable/ic_baseline_settings_24"
        android:title="@string/settings"
        android:enabled="true"
        app:showAsAction="ifRoom" />
</menu>