<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.PostMapFragment">


    <com.google.android.gms.maps.MapView
        android:id="@+id/map"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:layout_below="@+id/tvFinalMap"
        android:layout_marginTop="20dp" />

    <TextView
        android:id="@+id/tvFinalMap"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/cursive"
        android:text="@string/final_map"
        android:textColor="?colorPrimary"
        android:textSize="96sp" />

    <EditText
        android:id="@+id/etDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/map"
        android:layout_marginTop="5dp"
        android:ems="10"
        android:hint="@string/description"
        android:imeOptions="actionDone"
        android:inputType="text" />

    <Button
        android:id="@+id/btnProceed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="16dp"
        android:backgroundTint="?colorPrimary"
        android:text="@string/post"
        android:textColor="?colorOnPrimary" />

    <Button
        android:id="@+id/btnAddPhoto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btnProceed"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:backgroundTint="?colorPrimary"
        android:text="@string/add_photo"
        android:textColor="?colorOnPrimary" />
</RelativeLayout>