<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.CreateRoomFragment">

    <Button
        android:id="@+id/btnCreate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/cbInviteOnly"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:backgroundTint="?colorPrimary"
        android:text="@string/create_trip"
        android:textColor="?colorOnPrimary" />

    <TextView
        android:id="@+id/tvCreateTrip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:fontFamily="@font/cursive"
        android:text="@string/create_trip"
        android:textColor="?colorPrimaryVariant"
        android:textSize="80sp" />

    <EditText
        android:id="@+id/etRoomId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvCreateTrip"
        android:layout_marginStart="2dp"
        android:layout_marginTop="45dp"
        android:layout_toEndOf="@+id/tvRoomId"
        android:ems="10"
        android:hint="@string/room_id"
        android:imeOptions="actionDone"
        android:inputType="text" />

    <TextView
        android:id="@+id/tvRoomId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvCreateTrip"
        android:layout_alignParentStart="true"
        android:layout_marginStart="40dp"
        android:layout_marginTop="50dp"
        android:text="ID:"
        android:textColor="?colorOnSecondary"
        android:textSize="24sp" />

    <CheckBox
        android:id="@+id/cbInviteOnly"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etRoomId"
        android:layout_alignParentStart="true"
        android:layout_marginStart="40dp"
        android:layout_marginTop="10dp"
        android:text="@string/invite_only"
        android:textColor="?colorOnSecondary"
        android:textSize="16sp" />

</RelativeLayout>