<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/ivProfileImage"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/tvFriendRequest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_toEndOf="@+id/ivProfileImage"
        android:text="@string/friend_request"
        android:textSize="24sp"
        android:textStyle="bold" />

    <View
        android:id="@+id/border"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/ivProfileImage"
        android:layout_marginTop="4dp"
        android:background="?colorOnSecondary" />

    <TextView
        android:id="@+id/tvName"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvFriendRequest"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_toEndOf="@+id/ivProfileImage"
        tools:text="jsnipes" />

    <Button
        android:id="@+id/btnAccept"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_below="@+id/tvFriendRequest"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="10dp"
        android:layout_toStartOf="@+id/btnReject"
        android:backgroundTint="@color/green"
        android:text="@string/accept"
        android:textColor="?colorOnPrimary"
        android:textSize="12sp" />

    <Button
        android:id="@+id/btnReject"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_below="@+id/tvFriendRequest"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:backgroundTint="@color/red"
        android:text="@string/reject"
        android:textColor="?colorOnPrimary"
        android:textSize="12sp" />
</RelativeLayout>